# Oop_5

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: example.py  individual.py
test/: test_individual.py
xml/: workers.xml
